--- a/exerciceJS-master/ENTRAINEMENT/index.html
+++ b/exerciceJS-master/ENTRAINEMENT/index.html
@@ -7,7 +7,9 @@
     <title>Les boites de dialogues</title>
 </head>
 <body>
-    <div id="a-supprimer" class="alert alert-danger m-4">Ceci est un élément à supprimer grâce à JavaScript.</div>
+    <a href="#">Supprimer cet article</a>
+
+<button>Passez au-dessus de moi</button>
     <script src="./boite.js"></script>
 </body>
 </html>
